--- a/TODO.txt
+++ b/TODO.txt
@@ -1,12 +1,10 @@
-バグ Fontsize問題解決する
-バグ flymake問題解決方法をソース直接書き換えじゃなく,函数再定義に
 バグ minibufferでautocompleteが動くように
 整理 dired専用ファイル
 整理 emacs lisp開発専用ファイルを用意
-整理 fringe設定を別ファイルに移動
 整理 管理されてないelispをgitかpackage.elで管理する
 新規 ag.el https://github.com/Wilfred/ag.el
 新規 atool http://d.hatena.ne.jp/mooz/20110911/p1
+新規 eldoc c-eldoc
 新規 メールを読めるようにする
 移行 anythingからhelm
 移行 autocomplete-clangからautocomplete-clang-async
