ctagsの設定はいつかやります

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,7 @@
 bug minibufferでautocompleteが動くように
 cro autocomplete-clang -> autocomplete-clang-async
 new atool http://d.hatena.ne.jp/mooz/20110911/p1
+new ctags
 new eldoc c-eldoc
 new markdown-mode += pandoc-mode
 new メールを読めるようにする
