使ってなかったんで思い切ってyasnippetを削除する.

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,5 +4,6 @@ bug spaceの区別をText-modeとかでも行う
 new anzu
 new auto-highlight-symbol
 new ctags auto update
+new flyspellの設定
 new multiple-cursors
 new メールを読めるようにする
