anzu,multiple-cursorsの導入,その他調整

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,15 +1,6 @@
 bug faceの宣言の警告を消す
-bug http://stackoverflow.com/questions/20498554/how-do-i-make-flycheck-find-required-file-in-emacs-lisp
-bug minibufferでautocompleteが動くように
+bug minibufferでauto-completeが動くように
 bug spaceの区別をText-modeとかでも行う
 bug trampが.bash_historyを生成しないようにする
-bug ラテン文字交じり文は単語を分けるようにする
-che haskell-modeで保存するとimport読み込み直す
-che key-bindを大幅に変更する
-new anzu
-new auto-highlight-symbol
 new ctags auto update
-new flyspellの設定
-new multiple-cursors
 new メールを読めるようにする
-new 上改行,全体Sortをする関数を書く
