--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,4 @@
 bug faceの宣言の警告を消す
 bug minibufferでauto-completeが動くように
-bug spaceの区別をText-modeとかでも行う
+bug spaceの区別をtext-modeとかでも行う
 bug trampが.bash_historyを生成しないようにする
-new メールを読めるようにする
